# JuniorekNieOblany

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  PRD.md  README.md  Stack.md  compose.yaml  docker-entrypoint.sh  main.py  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
analyses/: admin.py  forms.py  models.py  schemas.py  services.py  tasks.py  tests.py  urls.py  views.py
analyses/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
static/src/: input.css
templates/: base.html
templates/analyses/: analysis_detail.html  analysis_form.html  analysis_list.html  analysis_status.html
templates/registration/: login.html  register.html
