[project]
name = "junioreknieoblany"
version = "0.1.0"
description = "AI-assisted code analysis and learning library for junior developers"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "celery[redis]==5.6.3",
    "django==6.0.7",
    "django-htmx==1.28.0",
    "gunicorn==23.0.0",
    "openai==2.20.0",
    "psycopg[binary]==3.3.4",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "sentry-sdk[django]==2.46.0",
]

[dependency-groups]
dev = [
    "django-stubs==6.0.7",
    "mypy==2.3.0",
    "pre-commit==4.6.1",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "ruff==0.15.22",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "tests.py"]
addopts = "-q --strict-markers"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"
